# PgDumpLens

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  designDoc.md  docker-compose.dev.yml  docker-compose.offline.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
backend/.cargo/: config.toml.example
backend/api/: Cargo.toml
backend/api/src/: config.rs  error.rs  main.rs  routes.rs  state.rs  tests.rs
backend/api/src/handlers/: diff.rs  dumps.rs  mod.rs  query.rs  relation.rs  risk.rs  sandbox.rs  schema.rs  search.rs
backend/api/src/handlers/console/: meta.rs  mod.rs  session.rs  sql.rs
backend/core/: Cargo.toml
backend/core/src/: diff.rs  domain.rs  error.rs  lib.rs  risk.rs  schema.rs  sql_gen.rs
backend/core/src/adapter/: mod.rs  postgres.rs
backend/migrations/: 001_initial.sql  002_add_is_private.sql  002_add_sandbox_databases.sql  003_multi_database_schemas.sql  004_add_excluded_tables.sql
backend/worker/: Cargo.toml
backend/worker/src/: config.rs  jobs.rs  main.rs
demo/: README.md  ecommerce_demo.sql  ecommerce_demo_v2.sql
deploy/k8s/: api.yaml  configmap.yaml  cronjob-cleanup.yaml  frontend.yaml  ingress.yaml  metadata-postgres.yaml  namespace.yaml  pvc.yaml  sandbox-postgres.yaml  secret.template.yaml  worker.yaml
deploy/nginx/: nginx.conf
docs/: USER_GUIDE.md  USER_GUIDE_EN.md  architecture.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  next.config.js  package.json  tailwind.config.js  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/d/[slug]/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: DataDiffViewer.tsx  DataTable.test.tsx  DataTable.tsx  DiffViewer.tsx  DumpList.tsx  FileUpload.tsx  JsonViewer.tsx  MermaidDiagram.tsx  RelationshipExplorer.tsx  RiskBadge.test.tsx  RiskBadge.tsx  SchemaExplorer.tsx  SearchResults.tsx  SqlConsole.test.tsx  SqlConsole.tsx
frontend/src/lib/: utils.test.ts  utils.ts
frontend/src/types/: index.ts
scripts/: export-images.ps1  export-images.sh  upload-dump.ps1  upload-dump.sh
