[workspace]
resolver = "2"
members = [
    "core",
    "api",
    "worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DB Viewer Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-postgres = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
slug = "0.1"

# Config
config = "0.14"
dotenvy = "0.15"

# Testing
mockall = "0.12"
wiremock = "0.5"
testcontainers = "0.15"

# Pin versions to avoid edition2024 issues (Rust 1.82 compatibility)
base64ct = "1.6.0"
