[package]
name = "db-viewer-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
slug.workspace = true
tracing.workspace = true
flate2.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util"] }
